--- a/src/main/java/vista/interfaces/ListaCosto.fxml
+++ b/src/main/java/vista/interfaces/ListaCosto.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.control.*?>
 <?scenebuilder-stylesheet Style.css?>
 
-<ScrollPane fitToHeight="true" fitToWidth="true" prefHeight="600.0" prefWidth="800.0" stylesheets="@Style.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<ScrollPane fitToHeight="true" fitToWidth="true" prefHeight="600.0" prefWidth="800.0" stylesheets="@Style.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="vista.controladores.ListaCosto">
    <content>
       <GridPane hgap="10.0" vgap="10.0">
          <columnConstraints>
@@ -17,22 +17,22 @@
             <RowConstraints minHeight="30.0" />
          </rowConstraints>
          <children>
-            <TableView>
+            <TableView fx:id="tblLista">
               <columns>
-                <TableColumn maxWidth="2500.0" prefWidth="75.0" text="Legajo" />
-                <TableColumn prefWidth="75.0" text="Apellido" />
-                  <TableColumn prefWidth="75.0" text="Nombre" />
-                  <TableColumn maxWidth="2500.0" prefWidth="75.0" text="Código" />
-                  <TableColumn prefWidth="75.0" text="Costo anterior" />
-                  <TableColumn prefWidth="75.0" text="Fecha anterior" />
-                  <TableColumn prefWidth="75.0" text="Costo actual" />
-                  <TableColumn prefWidth="75.0" text="Fecha actual" />
+                <TableColumn fx:id="colListaLegajo" maxWidth="2500.0" prefWidth="75.0" text="Legajo" />
+                <TableColumn fx:id="colListaApellido" prefWidth="75.0" text="Apellido" />
+                  <TableColumn fx:id="colListaNombre" prefWidth="75.0" text="Nombre" />
+                  <TableColumn fx:id="colListaCodigo" maxWidth="2500.0" prefWidth="75.0" text="Código" />
+                  <TableColumn fx:id="colListaCostoAnt" prefWidth="75.0" text="Costo actual" />
+                  <TableColumn fx:id="colListaFechaCostoAnt" prefWidth="75.0" text="Fecha actual" />
+                  <TableColumn fx:id="colListaCostoAct" prefWidth="75.0" text="Costo importado" />
+                  <TableColumn fx:id="colListaFechaCostoAct" prefWidth="75.0" text="Fecha importada" />
               </columns>
                <columnResizePolicy>
                   <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
                </columnResizePolicy>
             </TableView>
-            <Button minWidth="200.0" mnemonicParsing="false" text="Salir" GridPane.halignment="RIGHT" GridPane.rowIndex="1" />
+            <Button fx:id="btnSalir" minWidth="200.0" mnemonicParsing="false" onAction="#salir" text="Salir" GridPane.halignment="RIGHT" GridPane.rowIndex="1" />
          </children>
          <padding>
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
