--- a/src/main/java/vista/interfaces/Principal.fxml
+++ b/src/main/java/vista/interfaces/Principal.fxml
@@ -11,20 +11,24 @@
 
 <BorderPane prefHeight="720.0" prefWidth="1024.0" stylesheets="@Style.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="vista.controladores.Principal">
    <bottom>
-      <GridPane BorderPane.alignment="CENTER">
+      <GridPane hgap="10.0" BorderPane.alignment="CENTER">
         <columnConstraints>
             <ColumnConstraints hgrow="ALWAYS" maxWidth="1.7976931348623157E308" minWidth="10.0" prefWidth="613.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="200.0" />
         </columnConstraints>
         <rowConstraints>
             <RowConstraints minHeight="30.0" vgrow="NEVER" />
         </rowConstraints>
          <children>
-            <Label fx:id="lblMensajes" text="¡Bienvenido a Plumas 2!">
-               <padding>
-                  <Insets left="10.0" />
-               </padding>
-            </Label>
+            <Label fx:id="lblMensajes" text="¡Bienvenido a Plumas 2!" />
+            <Label fx:id="lblUsuario" text="Usuario logueado: " GridPane.columnIndex="1" GridPane.halignment="RIGHT" />
          </children>
+         <BorderPane.margin>
+            <Insets />
+         </BorderPane.margin>
+         <padding>
+            <Insets left="10.0" right="10.0" />
+         </padding>
       </GridPane>
    </bottom>
    <top>
