--- a/src/main/java/vista/interfaces/Docentes.fxml
+++ b/src/main/java/vista/interfaces/Docentes.fxml
@@ -14,7 +14,7 @@
 
 <ScrollPane fitToHeight="true" fitToWidth="true" prefHeight="600.0" prefWidth="800.0" stylesheets="@Style.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="vista.controladores.Docentes">
    <content>
-      <GridPane vgap="5.0">
+      <GridPane vgap="10.0">
          <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
          </columnConstraints>
@@ -24,7 +24,7 @@
             <RowConstraints vgrow="SOMETIMES" />
          </rowConstraints>
          <children>
-            <GridPane VBox.vgrow="NEVER">
+            <GridPane hgap="10.0" VBox.vgrow="NEVER">
               <columnConstraints>
                   <ColumnConstraints hgrow="NEVER" minWidth="10.0" prefWidth="100.0" />
                   <ColumnConstraints hgrow="NEVER" minWidth="10.0" prefWidth="100.0" />
@@ -45,7 +45,7 @@
                   </Label>
                   <TextField fx:id="txtLegajo" focusTraversable="false" mouseTransparent="true" GridPane.columnIndex="3">
                      <GridPane.margin>
-                        <Insets left="10.0" right="10.0" />
+                        <Insets />
                      </GridPane.margin>
                   </TextField>
                   <Label text="Apellido y nombre" GridPane.columnIndex="4">
@@ -55,20 +55,20 @@
                   </Label>
                   <TextField fx:id="txtNombre" editable="false" focusTraversable="false" mouseTransparent="true" GridPane.columnIndex="5">
                      <GridPane.margin>
-                        <Insets left="10.0" right="10.0" />
+                        <Insets />
                      </GridPane.margin>
                   </TextField>
-                  <Label text="Documento" />
+                  <Label text="Documento" GridPane.halignment="RIGHT" />
                   <TextField fx:id="txtDocumento" editable="false" GridPane.columnIndex="1" />
                </children>
                <VBox.margin>
                   <Insets bottom="10.0" top="10.0" />
                </VBox.margin>
                <GridPane.margin>
-                  <Insets bottom="5.0" top="5.0" />
+                  <Insets left="10.0" right="10.0" />
                </GridPane.margin>
             </GridPane>
-            <GridPane alignment="BOTTOM_LEFT" GridPane.rowIndex="1">
+            <GridPane alignment="BOTTOM_LEFT" vgap="5.0" GridPane.rowIndex="1">
                <children>
                   <Button fx:id="btnBuscar" contentDisplay="CENTER" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#buscarDocente" text="Buscar docente">
                      <GridPane.margin>
@@ -752,6 +752,9 @@
                </VBox.margin>
             </TabPane>
          </children>
+         <padding>
+            <Insets top="10.0" />
+         </padding>
       </GridPane>
    </content>
 </ScrollPane>
