--- a/src/main/java/vista/interfaces/Informes.fxml
+++ b/src/main/java/vista/interfaces/Informes.fxml
@@ -25,6 +25,7 @@
                   <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
               </columnConstraints>
               <rowConstraints>
                 <RowConstraints minHeight="30.0" vgrow="NEVER" />
@@ -35,7 +36,7 @@
                         <Insets />
                      </GridPane.margin>
                   </Button>
-                  <Button fx:id="btnInformesGuardarComo" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#guardarComo" text="Guardar como" GridPane.columnIndex="2">
+                  <Button fx:id="btnInformesGuardarComo" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#guardarComo" text="Guardar como..." GridPane.columnIndex="2">
                      <GridPane.margin>
                         <Insets />
                      </GridPane.margin>
@@ -50,6 +51,7 @@
                         <Insets />
                      </GridPane.margin>
                   </Button>
+                  <Button fx:id="btnInformesExcelComo" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#exportarComo" text="Exportar como..." GridPane.columnIndex="4" />
                </children>
             </GridPane>
             <GridPane hgap="10.0" vgap="5.0" GridPane.columnSpan="2147483647" GridPane.rowIndex="1">
@@ -121,135 +123,67 @@
                   <Insets />
                </GridPane.margin>
             </GridPane>
-            <GridPane hgap="10.0" GridPane.rowIndex="3">
-               <columnConstraints>
-                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
-                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
-               </columnConstraints>
-               <rowConstraints>
-                  <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
-               </rowConstraints>
+            <GridPane hgap="10.0" minHeight="-Infinity" prefHeight="200.0" GridPane.rowIndex="3">
+              <columnConstraints>
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="100.0" prefWidth="100.0" />
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="100.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="100.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="100.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="100.0" />
+              </columnConstraints>
+              <rowConstraints>
+                <RowConstraints minHeight="-Infinity" prefHeight="30.0" vgrow="NEVER" />
+                <RowConstraints vgrow="NEVER" />
+              </rowConstraints>
                <children>
-                  <GridPane minHeight="-Infinity" prefHeight="200.0">
-                    <columnConstraints>
-                      <ColumnConstraints hgrow="SOMETIMES" minWidth="100.0" />
-                        <ColumnConstraints hgrow="SOMETIMES" minWidth="100.0" />
-                        <ColumnConstraints hgrow="SOMETIMES" minWidth="100.0" />
-                        <ColumnConstraints hgrow="SOMETIMES" minWidth="100.0" />
-                    </columnConstraints>
-                    <rowConstraints>
-                      <RowConstraints minHeight="-Infinity" prefHeight="30.0" vgrow="NEVER" />
-                      <RowConstraints vgrow="NEVER" />
-                    </rowConstraints>
-                     <children>
-                        <Button fx:id="btnFiltroVer" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#verColumna" text="Ver">
-                           <GridPane.margin>
-                              <Insets left="5.0" right="5.0" />
-                           </GridPane.margin>
-                        </Button>
-                        <Button fx:id="btnFiltroOrdenar" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#ordenarColumna" text="Ordenar" GridPane.columnIndex="1">
-                           <GridPane.margin>
-                              <Insets left="5.0" right="5.0" />
-                           </GridPane.margin>
-                        </Button>
-                        <Button fx:id="btnFiltroSubir" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#subirColumna" text="Subir" GridPane.columnIndex="2">
-                           <GridPane.margin>
-                              <Insets left="5.0" right="5.0" />
-                           </GridPane.margin>
-                        </Button>
-                        <Button fx:id="btnFiltroBajar" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#bajarColumna" text="Bajar" GridPane.columnIndex="3">
-                           <GridPane.margin>
-                              <Insets left="5.0" right="5.0" />
-                           </GridPane.margin>
-                        </Button>
-                        <TableView fx:id="tblFiltro" GridPane.columnSpan="2147483647" GridPane.rowIndex="1">
-                          <columns>
-                            <TableColumn fx:id="colFiltroColumna" editable="false" prefWidth="75.0" sortable="false" text="Columna" />
-                            <TableColumn fx:id="colFiltroNombre" editable="false" prefWidth="75.0" sortable="false" text="Nombre" />
-                              <TableColumn fx:id="colFiltroVisible" editable="false" prefWidth="75.0" sortable="false" text="Visible" />
-                              <TableColumn fx:id="colFiltroOrdenar" prefWidth="75.0" text="Ordenar" />
-                              <TableColumn fx:id="colFiltroFiltro" prefWidth="75.0" text="Filtro" />
-                              <TableColumn fx:id="colFiltroCalculo" prefWidth="75.0" text="Cálculo" />
-                          </columns>
-                           <columnResizePolicy>
-                              <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-                           </columnResizePolicy>
-                           <GridPane.margin>
-                              <Insets top="5.0" />
-                           </GridPane.margin>
-                        </TableView>
-                     </children>
-                     <HBox.margin>
-                        <Insets bottom="10.0" left="10.0" />
-                     </HBox.margin>
+                  <Button fx:id="btnFiltroModificar" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#modificarColumna" text="Modificar">
                      <GridPane.margin>
                         <Insets />
                      </GridPane.margin>
-                  </GridPane>
-                  <GridPane alignment="CENTER" minHeight="-Infinity" prefHeight="200.0" styleClass="filter-pane" vgap="5.0" GridPane.columnIndex="1">
-                    <columnConstraints>
-                      <ColumnConstraints hgrow="SOMETIMES" />
-                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                      <ColumnConstraints hgrow="SOMETIMES" />
-                    </columnConstraints>
-                    <rowConstraints>
-                      <RowConstraints minHeight="30.0" vgrow="SOMETIMES" />
-                      <RowConstraints minHeight="30.0" vgrow="SOMETIMES" />
-                      <RowConstraints minHeight="30.0" vgrow="SOMETIMES" />
-                        <RowConstraints minHeight="30.0" vgrow="SOMETIMES" />
-                    </rowConstraints>
-                     <HBox.margin>
-                        <Insets bottom="10.0" left="10.0" right="10.0" />
-                     </HBox.margin>
-                     <children>
-                        <Label minWidth="55.0" text="Nombre">
-                           <GridPane.margin>
-                              <Insets right="10.0" />
-                           </GridPane.margin>
-                        </Label>
-                        <TextField fx:id="txtFiltroNombre" minWidth="-Infinity" prefWidth="200.0" promptText="Ingrese un nombre para la columna" GridPane.columnIndex="1" GridPane.columnSpan="2147483647" />
-                        <ComboBox fx:id="cmbFiltroFiltro" maxWidth="1.7976931348623157E308" minWidth="-Infinity" prefWidth="75.0" promptText="Filtro" GridPane.columnSpan="2" GridPane.rowIndex="1">
-                           <GridPane.margin>
-                              <Insets right="10.0" />
-                           </GridPane.margin>
-                        </ComboBox>
-                        <TextField fx:id="txtFiltroCondicion" minWidth="-Infinity" prefWidth="150.0" promptText="Ingrese la condición a filtrar" GridPane.columnIndex="2" GridPane.columnSpan="2147483647" GridPane.rowIndex="1" />
-                        <DatePicker fx:id="dtpFiltroCondicion" visible="false" GridPane.columnIndex="2" GridPane.rowIndex="1" />
-                        <ComboBox fx:id="cmbFiltroCalculo" maxWidth="1.7976931348623157E308" minWidth="-Infinity" prefWidth="75.0" promptText="Cálculo" GridPane.columnSpan="2" GridPane.rowIndex="2">
-                           <GridPane.margin>
-                              <Insets right="10.0" />
-                           </GridPane.margin>
-                        </ComboBox>
-                        <GridPane GridPane.columnSpan="2147483647" GridPane.rowIndex="3">
-                          <columnConstraints>
-                            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                          </columnConstraints>
-                          <rowConstraints>
-                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                          </rowConstraints>
-                           <children>
-                              <Button fx:id="btnFiltroAplicar" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#aplicarFiltro" text="Aplicar">
-                                 <GridPane.margin>
-                                    <Insets left="10.0" right="10.0" />
-                                 </GridPane.margin>
-                              </Button>
-                              <Button fx:id="btnFiltroLimpiar" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#limpiarFiltro" text="Limpiar" GridPane.columnIndex="1">
-                                 <GridPane.margin>
-                                    <Insets left="10.0" right="10.0" />
-                                 </GridPane.margin>
-                              </Button>
-                           </children>
-                        </GridPane>
-                     </children>
+                  </Button>
+                  <Button fx:id="btnFiltroVer" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#verColumna" text="Ver" GridPane.columnIndex="1">
                      <GridPane.margin>
                         <Insets />
                      </GridPane.margin>
-                     <padding>
-                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                     </padding>
-                  </GridPane>
+                  </Button>
+                  <Button fx:id="btnFiltroOrdenar" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#ordenarColumna" text="Ordenar" GridPane.columnIndex="2">
+                     <GridPane.margin>
+                        <Insets />
+                     </GridPane.margin>
+                  </Button>
+                  <Button fx:id="btnFiltroSubir" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#subirColumna" text="Subir" GridPane.columnIndex="3">
+                     <GridPane.margin>
+                        <Insets />
+                     </GridPane.margin>
+                  </Button>
+                  <Button fx:id="btnFiltroBajar" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#bajarColumna" text="Bajar" GridPane.columnIndex="4">
+                     <GridPane.margin>
+                        <Insets />
+                     </GridPane.margin>
+                  </Button>
+                  <TableView fx:id="tblFiltro" GridPane.columnSpan="2147483647" GridPane.rowIndex="1">
+                    <columns>
+                      <TableColumn fx:id="colFiltroColumna" editable="false" prefWidth="75.0" sortable="false" text="Columna" />
+                      <TableColumn fx:id="colFiltroNombre" editable="false" prefWidth="75.0" sortable="false" text="Nombre" />
+                        <TableColumn fx:id="colFiltroVisible" editable="false" prefWidth="75.0" sortable="false" text="Visible" />
+                        <TableColumn fx:id="colFiltroOrdenar" prefWidth="75.0" text="Ordenar" />
+                        <TableColumn fx:id="colFiltroFiltro" prefWidth="75.0" text="Filtro" />
+                        <TableColumn fx:id="colFiltroCalculo" prefWidth="75.0" text="Cálculo" />
+                    </columns>
+                     <columnResizePolicy>
+                        <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                     </columnResizePolicy>
+                     <GridPane.margin>
+                        <Insets top="5.0" />
+                     </GridPane.margin>
+                  </TableView>
                </children>
+               <HBox.margin>
+                  <Insets bottom="10.0" left="10.0" />
+               </HBox.margin>
+               <GridPane.margin>
+                  <Insets />
+               </GridPane.margin>
             </GridPane>
          </children>
          <padding>
