--- a/src/main/java/vista/interfaces/InformesFiltros.fxml
+++ b/src/main/java/vista/interfaces/InformesFiltros.fxml
@@ -33,9 +33,9 @@
       			<columnConstraints>
       				<ColumnConstraints hgrow="SOMETIMES" />
       				<ColumnConstraints hgrow="SOMETIMES" />
+                  <ColumnConstraints minWidth="20.0" />
       			</columnConstraints>
       			<rowConstraints>
-      				<RowConstraints minHeight="30.0" />
       				<RowConstraints minHeight="30.0" />
       				<RowConstraints minHeight="30.0" />
       			</rowConstraints>
@@ -43,29 +43,15 @@
       				<Insets bottom="10.0" left="10.0" right="10.0" />
       			</HBox.margin>
       			<children>
-                  <ComboBox fx:id="cmbFiltros" maxWidth="1.7976931348623157E308" promptText="Filtros disponibles" GridPane.columnSpan="2147483647" />
+                  <TextField fx:id="txtFiltro" promptText="Ingrese la condición a filtrar, por ejemplo: (FECHA Mayor a 2010) y (FECHA Menor a 2015)" GridPane.columnSpan="2147483647" />
       				<ComboBox fx:id="cmbFiltroFiltro" maxWidth="1.7976931348623157E308" minWidth="100.0" promptText="Tipo de filtro" GridPane.rowIndex="1">
       					<GridPane.margin>
       						<Insets />
       					</GridPane.margin>
       				</ComboBox>
-      				<TextField fx:id="txtFiltroCondicion" minWidth="300.0" promptText="Ingrese la condición a filtrar" GridPane.columnIndex="1" GridPane.columnSpan="2147483647" GridPane.rowIndex="1" />
-      				<DatePicker fx:id="dtpFiltroCondicion" visible="false" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                  <GridPane hgap="10.0" GridPane.columnSpan="2147483647" GridPane.rowIndex="2">
-                    <columnConstraints>
-                      <ColumnConstraints hgrow="SOMETIMES" minWidth="100.0" />
-                      <ColumnConstraints hgrow="SOMETIMES" minWidth="100.0" />
-                        <ColumnConstraints hgrow="SOMETIMES" minWidth="100.0" />
-                        <ColumnConstraints hgrow="SOMETIMES" minWidth="100.0" />
-                    </columnConstraints>
-                    <rowConstraints>
-                      <RowConstraints minHeight="30.0" />
-                    </rowConstraints>
-                     <children>
-                        <Button fx:id="btnFiltroAgregar" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#agregarFiltro" text="Agregar filtro" GridPane.columnIndex="1" />
-                        <Button fx:id="btnFiltroQuitar" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#quitarFiltro" text="Quitar filtro" GridPane.columnIndex="2" />
-                     </children>
-                  </GridPane>
+      				<TextField fx:id="txtFiltroCondicion" minWidth="300.0" promptText="Ingrese la condición a filtrar" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+      				<DatePicker fx:id="dtpFiltroCondicion" maxWidth="1.7976931348623157E308" visible="false" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                  <Button fx:id="btnFiltroAgregar" mnemonicParsing="false" onAction="#agregarFiltro" text="+" GridPane.columnIndex="2" GridPane.rowIndex="1" />
       			</children>
       			<GridPane.margin>
       				<Insets />
