--- a/src/main/java/vista/interfaces/ImportarCosto.fxml
+++ b/src/main/java/vista/interfaces/ImportarCosto.fxml
@@ -25,10 +25,10 @@
             <RowConstraints minHeight="30.0" prefHeight="30.0" />
         </rowConstraints>
          <children>
-            <Button fx:id="btnListar" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#listarCostos" prefHeight="30.0" prefWidth="50.0" text="Listar costos" GridPane.hgrow="SOMETIMES" />
+            <Button fx:id="btnListar" disable="true" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#listarCostos" prefHeight="30.0" prefWidth="50.0" text="Listar costos" GridPane.hgrow="SOMETIMES" />
             <Button fx:id="btnImportar" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#importar" prefHeight="30.0" prefWidth="50.0" text="Importar desde Excel" GridPane.columnIndex="1" GridPane.hgrow="SOMETIMES" />
-            <Button fx:id="btnGuardar" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#guardar" prefHeight="30.0" prefWidth="50.0" text="Guardar cambios" GridPane.columnIndex="2" GridPane.hgrow="SOMETIMES" />
-            <Button fx:id="btnDescartar" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#descartar" prefHeight="30.0" prefWidth="50.0" text="Descartar cambios" GridPane.columnIndex="3" GridPane.hgrow="SOMETIMES" />
+            <Button fx:id="btnGuardar" disable="true" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#guardar" prefHeight="30.0" prefWidth="50.0" text="Guardar cambios" GridPane.columnIndex="2" GridPane.hgrow="SOMETIMES" />
+            <Button fx:id="btnDescartar" disable="true" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#descartar" prefHeight="30.0" prefWidth="50.0" text="Descartar cambios" GridPane.columnIndex="3" GridPane.hgrow="SOMETIMES" />
             <Label fx:id="lblUltima" style="-fx-font-style: italic; -fx-font-weight: bold;" text="Última actualización:" GridPane.columnSpan="2" GridPane.rowIndex="1" />
             <Label text="Cargar fecha" GridPane.columnIndex="2" GridPane.halignment="RIGHT" GridPane.rowIndex="1" />
             <DatePicker fx:id="dtpFecha" GridPane.columnIndex="3" GridPane.rowIndex="1" />
