--- a/src/main/java/vista/interfaces/InformesFiltros.fxml
+++ b/src/main/java/vista/interfaces/InformesFiltros.fxml
@@ -43,7 +43,7 @@
       				<Insets bottom="10.0" left="10.0" right="10.0" />
       			</HBox.margin>
       			<children>
-                  <TextField fx:id="txtFiltro" promptText="Ingrese la condición a filtrar, por ejemplo: (FECHA Mayor a 2010) y (FECHA Menor a 2015)" GridPane.columnSpan="2147483647" />
+                  <TextField fx:id="txtFiltro" promptText="Ingrese la condición a filtrar, por ejemplo: (Mayor a 2010) y (Menor a 2015)" GridPane.columnSpan="2147483647" />
       				<ComboBox fx:id="cmbFiltroFiltro" maxWidth="1.7976931348623157E308" minWidth="100.0" promptText="Tipo de filtro" GridPane.rowIndex="1">
       					<GridPane.margin>
       						<Insets />
